# flowde

./: LICENSE  README.md  pyproject.toml
example/: tutorial.ipynb
flowde/: anim.py  solver.py
